aws ec2 deployment changes

--- a/templates/pages/events.html
+++ b/templates/pages/events.html
@@ -68,7 +68,7 @@
 
       <div class="col-md-5 my-auto text-center">
         <div class="os-animation" data-animation="fadeInLeft">
-          <img class="img-fluid" src="{% static 'pages/img/logos/tamu_ctf.png' %}" alt=""/>
+          <img class="img-fluid" src="{% static 'img/events/tamu_ctf.png' %}" alt=""/>
         </div> 
       </div> 
 
@@ -107,7 +107,7 @@
 
       <div class="col-md-7 my-auto text-center">
         <div class="os-animation" data-animation="fadeInRight">
-          <img class="round" src="{% static 'pages/img/logos/NCL-logo.png' %}" alt=""/>
+          <img class="round" src="{% static 'img/events/NCL-logo.png' %}" alt=""/>
         </div>
       </div>
     </div>
@@ -126,7 +126,7 @@
 
       <div class="col-md-5 my-auto text-center">
         <div class="os-animation" data-animation="fadeInLeft">
-          <img class="img-fluid" src="{% static 'pages/img/logos/sw-ccdc-logo.png' %}" width="400" alt=""/>
+          <img class="img-fluid" src="{% static 'img/events/sw-ccdc-logo.png' %}" width="400" alt=""/>
         </div>
       </div>
 
@@ -167,7 +167,7 @@
 
       <div class="col-md-7 my-auto text-center">
         <div class="os-animation" data-animation="fadeInRight">
-          <img class="round" src="{% static 'pages/img/logos/Cyber-Force-logo.png' %}" width="500" alt=""/>
+          <img class="round" src="{% static 'img/events/Cyber-Force-logo.png' %}" width="500" alt=""/>
         </div>
       </div>
 
