--- a/templates/partials/_landing-page.html
+++ b/templates/partials/_landing-page.html
@@ -10,7 +10,7 @@
 			Texas <span class="home-shadow-white text-maroon">A</span>&<span class="home-shadow-white text-maroon">M</span>
 		</h1>
 	</div>
-	<div id="home-title-caption">
+	<div id="home-title-caption homeFadeUp home-shadow-maroon">
 		<h3 class="animated homeFadeInUp home-shadow-maroon">Cybersecurity Club<h3>
 	</div>
 </div>
