--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -13,7 +13,7 @@
   </div>
   <div class="os-animation" data-animation="fadeInDown">
     <div class="row d-flext justify-content-center text-center">
-      <div class="col-6">
+      <div class="col-sm-10 col-md-8 col-lg-9">
         <p class="font-weight-bold lead text-dark m-0 p-2">
           Texas A&M Cybersecurity Club is a student-led and student-run organization under the support of Texas A&M Cybersecurity Center. 
           Our goal is to develop and encourage cybersecurity skills and awareness to students willing to learn. 
