--- a/tamucyber/static/css/style.css
+++ b/tamucyber/static/css/style.css
@@ -336,3 +336,20 @@ input.btn {
 .os-animation.animated {
   opacity: 1;
 }
+
+/*-- Custom Animations --*/
+@keyframes homeFadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 270%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+.homeFadeInUp {
+  animation-name: homeFadeInUp;
+}
