--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -26,6 +26,7 @@
 </div>
 <!-- End About Us Summary -->
 
+
 <!-- Officers Photos -->
 <div class="container">
   <div class="os-animation" data-animation="fadeInDown">
@@ -35,9 +36,10 @@
     </div>
   </div>
   <div class="row d-flex justify-content-center os-animation" data-animation="fadeInUp">
+
     <!-- team member 1 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Matthew Spence</h5>
@@ -45,16 +47,16 @@
           <hr class="m-0 p-0 my-2">
           <ul class="social-media">
             <li>
-              <a href="#"><i class="fab fa-linkedin fa-lg" style="color:#0e76a8"></i></a>
+              <a href="#"><i class="fab fa-linkedin about fa-lg"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-github-square fa-lg" style="color:#211F1F"></i></a>
+              <a href="#"><i class="fab fa-github-square about fa-lg"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-twitter-square fa-lg" style="color:#00acee;"></i></a>
+              <a href="#"><i class="fas fa-envelope about fa-lg"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fas fa-globe fa-lg text-dark"></i></a>
+              <a href="#"><i class="fas fa-link about fa-lg"></i></a>
             </li>
           </ul>
         </div>
@@ -62,7 +64,7 @@
     </div>
     <!-- team member 2 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Arjun Lalith</h5>
@@ -87,7 +89,7 @@
     </div>
     <!-- team member 3 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Jacob Kastenschmidt</h5>
@@ -112,7 +114,7 @@
     </div>
     <!-- team member 4 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Weijia Yuan</h5>
@@ -137,7 +139,7 @@
     </div>
     <!-- team member 5 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Teddy Heinen</h5>
@@ -162,7 +164,7 @@
     </div>
     <!-- team member 6 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Glenn Fitzpatrick</h5>
@@ -187,7 +189,7 @@
     </div>
     <!-- team member 7 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Alyssa Kalish</h5>
@@ -212,7 +214,7 @@
     </div>
     <!-- team member 8 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Emily Murphy</h5>
@@ -237,7 +239,7 @@
     </div>
     <!-- team member 9 -->
     <div class="col-sm-6 col-md-4 col-lg-4 col-xl-3 mb-4">
-      <div class="card border-0 shadow">
+      <div class="card about border-0 shadow">
         <img src="https://www.pngfind.com/pngs/m/676-6764065_default-profile-picture-transparent-hd-png-download.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title mb-0">Jonathan Saenz</h5>
