--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -121,7 +121,7 @@
 
 	<!-- Topic Covered -->
 	<div class="container mb-3">
-		<div class="os-animation" data-animation="fadeInUp">
+		<div class="os-animation" data-animation="fadeInLeft" data-delay="0s">
 			<div class="row d-flex justify-content-center text-center">
 				<!-- Cryptography -->
 				<div class="col-sm-6 col-md-4 mb-3">
