--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,7 +1,7 @@
 	<!-- Footer -->
 	<footer class="d-flex justify-content-center py-2 bg-black text-center">
 		<div class="text-white" >
-			&copy; 2020 Copyright Texas A&M Cybersecurity Club.</a>
+			Texas A&M Cybersecurity Club <span class="year"></span></a>
 		</div>
 	</footer>
 	<!-- End Footer -->
