--- a/templates/partials/_landing-page.html
+++ b/templates/partials/_landing-page.html
@@ -5,6 +5,8 @@
 
 <!-- Landing Page Title -->
 <div class="caption text-center text-light text-uppercase">
+	<!-- Alerts -->
+	{% include 'partials/_alerts.html' %}
 	<div id="home-title">
 		<h1 class="font-weight-bold os-animation home-shadow-maroon" data-animation="bounceInDown">
 			Texas <span class="home-shadow-white text-maroon">A</span>&<span class="home-shadow-white text-maroon">M</span>
@@ -15,7 +17,6 @@
 	</div>
 </div>
 <!-- End Landing Page Title -->
-
 
 <!-- Particles JS  https://github.com/VincentGarreau/particles.js -->
 <script src="{% static 'js/particles.min.js' %}"></script>
