--- a/tamucyber/static/css/admin.css
+++ b/tamucyber/static/css/admin.css
@@ -357,7 +357,7 @@ table thead th.sorted .sortoptions a {
     width: 14px;
     height: 14px;
     display: inline-block;
-    background: url(../img/sorting-icons.svg) 0 0 no-repeat;
+    /* background: url(../img/sorting-icons.svg) 0 0 no-repeat; */
     background-size: 14px auto;
 }
 
@@ -550,18 +550,18 @@ ul.messagelist li {
     font-size: 13px;
     padding: 10px 10px 10px 65px;
     margin: 0 0 10px 0;
-    background: #dfd url(../img/icon-yes.svg) 40px 12px no-repeat;
+    /* background: #dfd url(../img/icon-yes.svg) 40px 12px no-repeat; */
     background-size: 16px auto;
     color: #333;
 }
 
 ul.messagelist li.warning {
-    background: #ffc url(../img/icon-alert.svg) 40px 14px no-repeat;
+    /* background: #ffc url(../img/icon-alert.svg) 40px 14px no-repeat; */
     background-size: 14px auto;
 }
 
 ul.messagelist li.error {
-    background: #ffefef url(../img/icon-no.svg) 40px 12px no-repeat;
+    /* background: #ffefef url(../img/icon-no.svg) 40px 12px no-repeat; */
     background-size: 16px auto;
 }
 
@@ -635,7 +635,7 @@ div.system-message p.system-message-title {
     padding: 4px 5px 4px 25px;
     margin: 0;
     color: #c11;
-    background: #ffefef url(../img/icon-no.svg) 5px 5px no-repeat;
+    /* background: #ffefef url(../img/icon-no.svg) 5px 5px no-repeat; */
 }
 
 .description {
@@ -666,22 +666,22 @@ div.breadcrumbs a:focus, div.breadcrumbs a:hover {
 
 .viewlink, .inlineviewlink {
     padding-left: 16px;
-    background: url(../img/icon-viewlink.svg) 0 1px no-repeat;
+    /* background: url(../img/icon-viewlink.svg) 0 1px no-repeat; */
 }
 
 .addlink {
     padding-left: 16px;
-    background: url(../img/icon-addlink.svg) 0 1px no-repeat;
+    /* background: url(../img/icon-addlink.svg) 0 1px no-repeat; */
 }
 
 .changelink, .inlinechangelink {
     padding-left: 16px;
-    background: url(../img/icon-changelink.svg) 0 1px no-repeat;
+    /* background: url(../img/icon-changelink.svg) 0 1px no-repeat; */
 }
 
 .deletelink {
     padding-left: 16px;
-    background: url(../img/icon-deletelink.svg) 0 1px no-repeat;
+    /* background: url(../img/icon-deletelink.svg) 0 1px no-repeat; */
 }
 
 a.deletelink:link, a.deletelink:visited {
@@ -727,7 +727,7 @@ a.deletelink:focus, a.deletelink:hover {
     display: block;
     float: left;
     padding: 3px 12px;
-    background: #999;
+    /* background: #999; */
     font-weight: 400;
     font-size: 11px;
     text-transform: uppercase;
@@ -750,11 +750,11 @@ a.deletelink:focus, a.deletelink:hover {
 }
 
 .object-tools a.viewsitelink, .object-tools a.golink {
-    background-image: url(../img/tooltag-arrowright.svg);
+    /* background-image: url(../img/tooltag-arrowright.svg); */
 }
 
 .object-tools a.addlink {
-    background-image: url(../img/tooltag-add.svg);
+    /* background-image: url(../img/tooltag-add.svg); */
 }
 
 /* OBJECT HISTORY */
