--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
     {% include 'partials/_landing-page.html' %}
   {% endif %}
 
+	<!-- Alerts -->
+
   <!-- Main Content -->
   {% block content %}{% endblock %}
 
