--- a/templates/pages/calander.html
+++ b/templates/pages/calander.html
@@ -4,10 +4,10 @@
 
 {% block content %}
 
-  <div class="container">
-    <div class="row text-center my-4">
-      <div class="col-12">
-          <iframe src="https://calendar.google.com/calendar/embed?src=tamucybersec%40gmail.com&ctz=America%2FChicago&showTitle=0" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+  <div class="container-fuild">
+    <div class="row d-flex align-items-center justify-content-center calender">
+      <div>
+          <iframe src="https://calendar.google.com/calendar/embed?src=tamucybersec%40gmail.com&ctz=America%2FChicago&showTitle=0" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
       </div>
     </div>
   </div>
