--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -64,7 +64,13 @@
           <a class="nav-link" href="#">Register</a>
         </li> -->
         <!-- <li class="nav-item">
-					<a class="nav-link" href="#">Login</a>
+					<a 
+						{# if 'login' in request.path %}
+							class="nav-link active" 
+						{# else %}
+							class="nav-link" 
+						{# endif %}
+					href="{# url 'login' %}">Login</a>
         </li> -->
 			</ul>
 		</div>
