--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -8,13 +8,13 @@
 <!-- Start About Us Summary -->
 <div class="container-fluid mt-3">
   <div class="row os-animation" data-animation="fadeInDown">
-    <h2 class="w-100 font-weight-bold text-dark text-center" style="letter-spacing: .5px;">About Us</h2>
+    <h2 class="w-100 font-weight-bold text-white text-center" style="letter-spacing: .5px;">About Us</h2>
     <hr class="w-25 border-maroon mb-2">
   </div>
   <div class="os-animation" data-animation="fadeInDown">
     <div class="row d-flext justify-content-center text-center">
       <div class="col-sm-10 col-md-8 col-lg-9">
-        <p class="font-weight-bold lead text-dark m-0 p-2">
+        <p class="font-weight-bold lead text-white m-0 p-2">
           Texas A&M Cybersecurity Club is a student-led and student-run organization under the support of Texas A&M Cybersecurity Center. 
           Our goal is to develop and encourage cybersecurity skills and awareness to students willing to learn. 
           No experience is necessary so come join our meetings and events to learn, network, compete, and have fun. 
@@ -31,7 +31,7 @@
 <div class="container">
   <div class="os-animation" data-animation="fadeInDown">
     <div class="row">
-      <h2 class="w-100 font-weight-bold text-dark text-center mt-2" style="letter-spacing: .5px;">Our Team</h2>
+      <h2 class="w-100 font-weight-bold text-white text-center mt-2" style="letter-spacing: .5px;">Our Team</h2>
       <hr class="w-25 border-maroon mb-4">
     </div>
   </div>
