--- a/templates/pages/calendar.html
+++ b/templates/pages/calendar.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %} | Calander {% endblock%}
+{% block title %} | Calendar {% endblock%}
 
 {% block content %}
 
   <div class="container-fuild">
-    <div class="row d-flex align-items-center justify-content-center calender">
+    <div class="row d-flex align-items-center justify-content-center calendar">
       <div>
           <iframe src="https://calendar.google.com/calendar/embed?src=tamucybersec%40gmail.com&ctz=America%2FChicago&showTitle=0" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
       </div>
