--- a/templates/pages/events.html
+++ b/templates/pages/events.html
@@ -8,7 +8,7 @@
 <!-- Event Start 3 Logos -->
 <div class="container">
   <div class="row os-animation" data-animation="fadeInDown">
-    <h2 class="w-100 font-weight-bold text-dark text-center mt-3" style="letter-spacing: .5px;">Events and Competitions</h2>
+    <h2 class="w-100 font-weight-bold text-white text-center mt-3" style="letter-spacing: .5px;">Events and Competitions</h2>
     <hr class="w-25 border-maroon mb-4">
   </div>
   <div class="row d-flex justify-content-around text-center">
@@ -50,7 +50,7 @@
   <div class="row">
     <div class="col-12">
       <div class="os-animation event-type-title" data-animation="fadeInUp">
-        <h2 class="w-100 font-weight-bold text-dark display-4 mx-3" style="letter-spacing: .5px;">
+        <h2 class="w-100 font-weight-bold text-white display-4 mx-3" style="letter-spacing: .5px;">
           Competitions
           <hr class="border-maroon-left">
         </h2>
@@ -60,7 +60,7 @@
   <!-- Start Capture the Flag Competitions-->
   <div class="row mx-5">
     <div class="os-animation col-12 mt-3" data-animation="fadeInLeft">
-      <div class="h1 text-black font-weight-bold ml-3 mt-2"><u>Capture the Flag</u></div>
+      <div class="h1 text-white font-weight-bold ml-3 mt-2"><u>Capture the Flag</u></div>
     </div>
 
     <!-- Two Column Section -->
@@ -72,7 +72,7 @@
         </div> 
       </div> 
 
-      <div class="col-md-7 my-auto">
+      <div class="col-md-7 my-auto text-white">
         <div class="os-animation" data-animation="fadeInRight">
           <h4 class="py-2 text-left">Texas A&M Capture the Flag</h4>
           <p class="lead pt-2">
@@ -90,7 +90,7 @@
     <!-- Two Column Section -->
     <div class="row px-4">
 
-      <div class="col-md-5 my-auto">
+      <div class="col-md-5 my-auto text-white">
         <div class="os-animation" data-animation="fadeInLeft">
           <h4 class="py-2 text-left">National Cyber League</h4>
           <p class="lead pt-2">
@@ -118,7 +118,7 @@
   <!-- BLUE TEAM COMPETITIONS -->
   <div class="row mx-5">
     <div class="os-animation col-12 mt-5" data-animation="fadeInLeft">
-      <div class="h1 text-black font-weight-bold ml-3 mt-2"><u>Blue Team Focused</u></div>
+      <div class="h1 text-white font-weight-bold ml-3 mt-2"><u>Blue Team Focused</u></div>
     </div>
 
     <!-- Two Column Section -->
@@ -130,7 +130,7 @@
         </div>
       </div>
 
-      <div class="col-md-7 my-auto">
+      <div class="col-md-7 my-auto text-white">
         <div class="os-animation" data-animation="fadeInRight">
           <h4 class="py-2 text-left">Collegiate Cyber Defense Competition</h4>
           <p class="lead pt-2">
@@ -150,7 +150,7 @@
     <!-- Two Column Section -->
     <div class="row px-4">
 
-      <div class="col-md-5 my-auto">
+      <div class="col-md-5 my-auto text-white">
         <div class="os-animation" data-animation="fadeInLeft">
           <h4 class="py-2 text-left">CyberForce</h4>
           <p class="lead pt-2">
@@ -165,7 +165,7 @@
         </div> 
       </div>
 
-      <div class="col-md-7 my-auto text-center">
+      <div class="col-md-7 my-auto text-center text-white">
         <div class="os-animation" data-animation="fadeInRight">
           <img class="round" src="{% static 'img/events/Cyber-Force-logo.png' %}" width="500" alt=""/>
         </div>
