--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -38,12 +38,12 @@
         </li>
         <li class="nav-item">
 					<a
-						{% if 'calander' in request.path %}
+						{% if 'calendar' in request.path %}
 							class="nav-link active" 
 						{% else %}
 							class="nav-link" 
 						{% endif %}
-					href="{% url 'calander' %}">Calander</a>
+					href="{% url 'calendar' %}">Calendar</a>
         </li>
         <li class="nav-item">
 					<a
