--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -9,9 +9,9 @@
 	<!-- Section 2 - Club info -->	
 	<div id="features" class="offset container my-4">
 		<div class="os-animation animated fadeInUp" data-animation="fadeInUp">
-			<div class="row text-center justify-content-center">
+			<div class="row text-center text-white justify-content-center">
 				<div class="col-lg-10 col-xl-9">
-					<h1 class="text-dark">Interested in Cybersecurity?</h1>
+					<h1>Interested in Cybersecurity?</h1>
 					<div class="title-underline"></div>
 					<h4>
 						Texas A&M Cybersecurity Club is an organization for people interested in learning practical skills and knowledge in the cybersecurity field. 
@@ -26,7 +26,7 @@
 	<!-- Section 3 -->	
 	<div class="container">
 		<!-- 3 column about club -->
-		<div class="row">
+		<div class="row text-white">
 			<!-- Meetings -->
 			<div class="col-md-4">
 				<div class="os-animation" data-animation="fadeInLeft">
@@ -35,9 +35,9 @@
 							<img src="{% static 'img/home/cyberclubLogo.png' %}" alt="#" height="200px">
 						</div>
 						<div class="text-center">
-						<h4 class="my-4 text-dark">Weekly Meetings</h4>
-						<h4>Come join us Tuesdays and Thursdays at ETB 1005 at 5:30 pm for our weekly meetings. Join our mailing list to get the latest update or check the calender</h4>
-						<a class="btn btn-outline-dark btn-sm" href="calander.html">Calander</a>
+						<h4 class="my-4">Weekly Meetings</h4>
+						<h4>Come join us Tuesdays and Thursdays at ETB 1005 at 5:30 pm for our weekly meetings. Join our mailing list to get the latest update or check the calendar</h4>
+						<a class="btn btn-outline-light btn-sm" href="{% static 'calendar' %}">Calendar</a>
 						</div>
 					</div>
 				</div>
@@ -51,9 +51,9 @@
 							<img src="{% static 'img/home/discord.jpeg' %}" alt="#" height="200px">
 						</div>
 						<div class="text-center">
-							<h4 class="my-4 text-dark">Discord</h4>
+							<h4 class="my-4">Discord</h4>
 							<h4 class="mx-3">Stay connected with the members in the club and activities on discord.</h4>
-							<a class="btn btn-outline-dark btn-sm" href="#">Join</a>
+							<a class="btn btn-outline-light btn-sm" href="https://discord.gg/GUEkgD/">Join</a>
 						</div>
 					</div>
 				</div>
@@ -67,11 +67,11 @@
 							<img src="{% static 'img/home/Icons_CTF.png' %}" alt="#" height="200px">
 						</div>
 						<div class="text-center">
-							<h4 class="my-4 text-dark">Compete</h4>
+							<h4 class="my-4 text-white">Compete</h4>
 							<h4 class="mx-3">There are several opportunities year-round to compete with a team or individually.
 								Check out the events page for future opportunities.
 							</h4>
-							<a class="btn btn-outline-dark btn-sm" href="#">Events</a>
+							<a class="btn btn-outline-light btn-sm" href="{% static 'events' %}">Events</a>
 						</div>
 					</div>
 				</div>
@@ -83,12 +83,12 @@
 	<!-- End Section 3 -->	
 
 	<!-- Newsletter Signup -->
-	<div class="bg-light-gray os-animation py-3" data-animation="fadeInUp">
+	<div class="bg-dark os-animation py-3" data-animation="fadeInUp">
 		<form id="mailing-list" action="" method="post" target="_blank">
 			<div class="container">
 				<div class="row d-flex justify-content-center align-items-center">
 					<div class="col-md-12 col-lg-12 col-xl-5 p-0 my-1 text-center">
-						<h5 class="text-dark">Subscribe to our mailing list for lastest updates!</h5>
+						<h5 class="text-white">Subscribe to our mailing list for lastest updates!</h5>
 					</div>
 						<div class="col-sm-6 col-md-5 col-lg-5 col-xl-4 p-0 my-1">
 							<div class="form-group">
@@ -96,7 +96,7 @@
 							</div>
 						</div>
 						<div class="col-lg-3 col-xl-2 text-center mb-3">
-							<button type="submit" class="btn btn-outline-dark btn-xl" data-toggle="modal" data-target="#success">Subscribe<i class="far fa-paper-plane ml-1"></i></button>
+							<button type="submit" class="btn btn-outline-light btn-xl" data-toggle="modal" data-target="#success">Subscribe<i class="far fa-paper-plane ml-1"></i></button>
 						</div>
 				</div>
 			</div>
@@ -109,9 +109,9 @@
 		<div class="os-animation" data-animation="fadeInUp">
 			<div class="row text-center justify-content-center">
 				<div class="col-lg-10 col-xl-9">
-					<h1 class="text-dark">Topics We Cover</h1>
+					<h1 class="text-white">Topics We Cover</h1>
 					<div class="title-underline"></div>
-					<h4 class="mb-5">For upcoming topics in the next meeting, please visit our <a class="maroon-link" href="#">calander</a>.</h1>
+					<h4 class="mb-5 text-white">For upcoming topics in the next meeting, please visit our <a class="maroon-link" href="{% static 'calendar' %}">calendar</a>.</h1>
 				</div>
 			</div>
 			<!-- End Row -->
@@ -134,7 +134,7 @@
 						</div>
 						<div class="w-100"></div>
 						<div class="p-0">
-							<h4 class="text-dark text-uppercase">Cryptography</h4>
+							<h4 class="text-white text-uppercase">Cryptography</h4>
 						</div>
 					</div>
 				</div>
@@ -151,7 +151,7 @@
 						</div>
 						<div class="w-100"></div>
 						<div class="p-0">
-							<h4 class="text-dark text-uppercase"> Hack the Box</h4>
+							<h4 class="text-white text-uppercase"> Hack the Box</h4>
 						</div>
 					</div>
 				</div>
@@ -167,7 +167,7 @@
 						</div>
 						<div class="w-100"></div>
 						<div class="p-0">
-							<h4 class="text-dark text-uppercase">Password Cracking</h4>
+							<h4 class="text-white text-uppercase">Password Cracking</h4>
 						</div>
 					</div>
 				</div>
@@ -183,7 +183,7 @@
 						</div>
 						<div class="w-100"></div>
 						<div class="p-0">
-							<h4 class="text-dark text-uppercase">Network Traffic Analysis</h4>
+							<h4 class="text-white text-uppercase">Network Traffic Analysis</h4>
 						</div>
 					</div>
 				</div>
@@ -199,7 +199,7 @@
 						</div>
 						<div class="w-100"></div>
 						<div class="p-0">
-							<h4 class="text-dark text-uppercase">Web Application Exploitation</h4>
+							<h4 class="text-white text-uppercase">Web Application Exploitation</h4>
 						</div>
 					</div>
 				</div>
@@ -215,7 +215,7 @@
 						</div>
 						<div class="w-100"></div>
 						<div class="p-0">
-							<h4 class="text-dark text-uppercase">Careers and Interviews</h4>
+							<h4 class="text-white text-uppercase">Careers and Interviews</h4>
 						</div>
 					</div>
 				</div>
