--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -3,7 +3,12 @@
 {% block title %} | Register Account {% endblock %}
 
 {% block content %}
-<section id="register" class="bg-light py-5">
+<style>
+    html, body {
+        background: #505962;
+    }
+</style>
+<section id="register" class="py-5">
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto">
