--- a/templates/pages/calendar.html
+++ b/templates/pages/calendar.html
@@ -4,12 +4,40 @@
 
 {% block content %}
 
-  <div class="container-fuild">
-    <div class="row d-flex align-items-center justify-content-center calendar">
-      <div>
+<!-- http://themeloom.com/2013/02/tips-embed-google-maps-and-calendars-in-a-responsive-wordpress-theme/ -->
+<style>
+  /* Responsive iFrame */
+  .responsive-iframe-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  height: 90vh;
+  overflow: hidden;
+  }
+
+  .responsive-iframe-container iframe,
+  .vresponsive-iframe-container object,
+  .vresponsive-iframe-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  }
+</style>
+
+  <div class="container">
+    <div class="responsive-iframe-container">
+      <div class="row d-flex align-items-center justify-content-center calendar">
+        <div class="d-md-none">
+            <iframe src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=c2Flbnpqb25hdGhhbjExQHRhbXUuZWR1&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=dGFtdS5lZHVfNWNjc2VwNWxvOWZpNWRic21waXZzb2NhZm9AZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;color=%23039BE5&amp;color=%2333B679&amp;color=%23AD1457&amp;color=%230B8043&amp;mode=AGENDA&amp;showTitle=0&amp;showNav=1&amp;showPrint=0&amp;showDate=1&amp;showTabs=0&amp;showCalendars=1&amp;showTz=1" style="border:solid 1px #777" width="500" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div class="d-none d-md-block">
           <iframe src="https://calendar.google.com/calendar/embed?src=tamucybersec%40gmail.com&ctz=America%2FChicago&showTitle=0" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> 
+        </div>
       </div>
     </div>
   </div>
+  <!-- https://medium.com/wdstack/bootstrap-4-hidden-visible-dd969a4c5854 -->
 
 {% endblock %}
