--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -53,7 +53,7 @@
 						<div class="text-center">
 							<h4 class="my-4">Discord</h4>
 							<h4 class="mx-3">Stay connected with the members in the club and activities on discord.</h4>
-							<a class="btn btn-outline-light btn-sm" href="https://discord.gg/GUEkgD/">Join</a>
+							<a class="btn btn-outline-light btn-sm" href="https://discord.gg/nCpZzbB">Join</a>
 						</div>
 					</div>
 				</div>
@@ -250,7 +250,7 @@
 								<div class="row d-flex justify-content-center text-center">
 									<div class="twitter col-sm col-md-5 col-lg-4 mb-2"><a href="https://twitter.com/tamucybersec/" target="_blank"><i class="fab fa-twitter-square fa-3x"></i></a></div>
 									<div class="col-sm col-md-5 col-lg-4 mb-2"><a href="https://github.com/tamsec" target="_blank"><i class="fab fa-github-square fa-3x"></i></a></div>
-									<div class="discord col-sm col-md-5 col-lg-4 mb-2"><a href="https://discord.gg/GUEkgD/" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
+									<div class="discord col-sm col-md-5 col-lg-4 mb-2"><a href="https://discord.gg/nCpZzbB" target="_blank"><i class="fab fa-discord fa-3x"></i></a></div>
 									<div class="facebook col-sm col-md-5 col-lg-4 mb-2"><a href="https://www.facebook.com/TAMUCyberSec/" target="_blank"><i class="fab fa-facebook-square fa-3x"></i></a></div>
 									<div class="linkedin col-sm col-md-5 col-lg-4 mb-2"><a href="https://www.linkedin.com/school/tamucybersecuritycenter/" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
 								</div>
